--- a/frontend/views/layouts/main.pug
+++ b/frontend/views/layouts/main.pug
@@ -9,6 +9,9 @@ html(lang="es")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css", rel="stylesheet")
     // BOOTSTRAP ICONS
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css")
+    // DATATABLES JS
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.3.3/css/dataTables.bootstrap5.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/3.2.5/css/buttons.bootstrap5.css">
     // CSS PERSONALIZADO
     link(rel="stylesheet", href="/css/styles.css")
     block extraCSS
