--- a/frontend/views/partials/footer.pug
+++ b/frontend/views/partials/footer.pug
@@ -9,3 +9,31 @@ footer.bg-white.border-top.mt-5
         | © 2025
         span.fw-medium.text-primary Huellitas Felices
         |  - Sistema Veterinario
+
+
+// JQUERY (necesario si usás plugins de DataTables que dependen de él)
+script(src="https://code.jquery.com/jquery-3.7.1.js")
+
+// DATATABLE JS core + integración Bootstrap 5
+script(src="https://cdn.datatables.net/2.3.3/js/dataTables.js")
+script(src="https://cdn.datatables.net/2.3.3/js/dataTables.bootstrap5.js")
+
+// DATATABLES Botones
+script(src="https://cdn.datatables.net/buttons/3.2.5/js/dataTables.buttons.js")
+script(src="https://cdn.datatables.net/buttons/3.2.5/js/buttons.bootstrap5.js")
+script(src="https://cdn.datatables.net/buttons/3.2.5/js/buttons.dataTables.js")
+
+// Librerías extra para exportación
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js")
+script(src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js")
+
+// Extensiones Botones (HTML5, print)
+script(src="https://cdn.datatables.net/buttons/3.2.5/js/buttons.html5.min.js")
+script(src="https://cdn.datatables.net/buttons/3.2.5/js/buttons.print.min.js")
+
+// Script global de inicialización (si lo querés usar en todas las tablas)
+script(src="/js/datatables.js")
+
+// Bloque para scripts específicos de cada página
+block scripts
