mejora en mod Agenda ahora empleados y clientes estan relacionados con Agenda

--- a/frontend/views/pages/agenda.pug
+++ b/frontend/views/pages/agenda.pug
@@ -78,12 +78,9 @@ block content
                     input.form-control(type="time", id="hora", required)
                 .col-md-3
                   .mb-3
-                    label.form-label(for="veterinario") Veterinario
+                    label.form-label(for="veterinario") Profesional
                     select.form-select(id="veterinario", required)
-                      option(value="") Seleccionar veterinario...
-                      option(value="Dr. García") Dr. García
-                      option(value="Dra. López") Dra. López
-                      option(value="Dr. Martínez") Dr. Martínez
+                      //ACA SE GEENRAR DINAMICAMENTE LOS PROFESIONALES EN BASE A LA TABLA EMPLEADOS
               hr.my-3
               // Segunda fila: Datos del Cliente
               .col-12
